tests/ui/const-generics/adt_const_params/reference_pointee_is_const_param-1.stderr
error[E0204]: the trait `ConstParamTy_` cannot be implemented for this type
  --> $DIR/reference_pointee_is_const_param-1.rs:8:24
   |
LL | impl ConstParamTy_ for &'static Foo {}
   |                        ^^^^^^^^^^^^ this field does not implement `ConstParamTy_`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0204`.
